# babelbert

./: LICENSE  README.md  evaluate.py  pyproject.toml  train.py
configs/: train.yaml
configs/dataset/: default_dataset.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: mbert.yaml  xlm-r.yaml
configs/task/: bli.yaml  tatoeba.yaml  xlsim.yaml
datamodules/: babelnet_dm.py
datasets/bli_datasets/vulic/bg-ca/: bg-ca.test.2000.cc.trans  bg-ca.train.1000.cc.trans  bg-ca.train.2000.cc.trans  bg-ca.train.500.cc.trans  bg-ca.train.5000.cc.trans
datasets/bli_datasets/vulic/bg-eo/: bg-eo.test.2000.cc.trans  bg-eo.train.1000.cc.trans  (+3 more)
datasets/multisimlex/: CMN-CYM.csv  CMN-ENG.csv  CMN-EST.csv  CMN-FIN.csv  CMN-FRA.csv  CMN-HEB.csv  CMN-POL.csv  CMN-RUS.csv  CMN-SPA.csv  CMN-SWA.csv  CMN-YUE.csv  CYM-ENG.csv  CYM-EST.csv  CYM-FIN.csv  CYM-FRA.csv  CYM-HEB.csv  CYM-POL.csv  CYM-RUS.csv  CYM-SPA.csv  CYM-SWA.csv  CYM-YUE.csv  ENG-EST.csv  ENG-FIN.csv  ENG-FRA.csv  ENG-HEB.csv  ENG-POL.csv  ENG-RUS.csv  ENG-SPA.csv  ENG-SWA.csv  ENG-YUE.csv  EST-FIN.csv  EST-FRA.csv  EST-HEB.csv  EST-POL.csv  EST-RUS.csv  EST-SPA.csv  EST-SWA.csv  EST-YUE.csv  FIN-FRA.csv  FIN-HEB.csv  (+26 more)
datasets/vocab/: bg_vocab.txt  ca_vocab.txt  de_vocab.txt  download_fasttext.sh  en_vocab.txt  eo_vocab.txt  et_vocab.txt  eu_vocab.txt  fi_vocab.txt  fr_vocab.txt  get_vocab.py  he_vocab.txt  hr_vocab.txt  hu_vocab.txt  id_vocab.txt  it_vocab.txt  ka_vocab.txt  ko_vocab.txt  lt_vocab.txt  no_vocab.txt  ru_vocab.txt  th_vocab.txt  tr_vocab.txt
models/: model.py
utils/: functions.py
(+1040 files in other folders)
